# python-project-52

./: .env_template  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CI.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  utils.py  views.py
task_manager/fixtures/: fixture_all.json  label_example_after.json  status_example_after.json  task_example_after.json  user_after.json
task_manager/labels/: admin.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  index.html  login.html  navigation.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/manage/: create.html  delete.html  show_task.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  index.html  show.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/users/: forms.py  mixins.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
(+4 files in other folders)
